--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  Build:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,11 +20,9 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-  Test:
     - name: Test With Coverage
       run: go test -v  -coverprofile=coverage.txt -covermode=atomic ./...
 
-  Coverage:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
 
